// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DebateStepPageVoteForm/> should renders correctly when argumented 1`] = `
<div
  style="width:100%;opacity:0"
>
  <div
    class="sc-bdnxRM Flex___StyledAppBox-RSPpX kFoLMp"
  >
    <span
      aria-label="vote"
      class="DebateStepPageVoteForm___StyledSpan2-llFVim coOvRu"
      role="img"
    >
      🎉
    </span>
    <span>
      thanks-for-debate-richer
    </span>
    <button
      class="sc-bdnxRM Button__ButtonInner-dWPVNG jyZEiW fLviuu"
      type="button"
    >
      delete.vote.against
    </button>
  </div>
  <div
    class="sc-bdnxRM Flex___StyledAppBox-RSPpX KSjKw fvBSZY"
  >
    <a
      class="twitter-share-button"
      data-show-count="false"
      href="https://twitter.com/share?ref_src=twsrc%5Etfw"
    >
      Tweet
    </a>
    <button
      class="sc-bdnxRM Button__ButtonInner-dWPVNG fVKHUK jfKDDI"
      type="button"
    >
      <iconmock
        class="sc-bdnxRM Icon__IconInner-dsjTlW Icon___StyledIconInner-cEPYKG cyHrtp cIIQlv AMDLx icon"
      />
      global.link
    </button>
  </div>
  <div
    class="sc-bdnxRM cnbanf DebateStepPageVoteForm___StyledCard-fgMgDs eazeOX"
  >
    <form
      class="DebateStepPageVoteForm__Form-kqneNm jEFxSi"
      id="debate-argument-form"
    >
      <div
        class="form-group"
      >
        <textarea
          aria-describedby="label-body "
          aria-invalid="false"
          autocomplete="off"
          class="form-control"
          id="body"
          minlength="1"
          name="body"
          placeholder="why-are-you-against"
          type="textarea"
        />
        <div
          class="Notepad__Container-inQLrC cTBqFb visible-print-block"
        >
          <span />
          <span />
          <span />
          <span />
          <span />
          <span />
          <span />
          <span />
          <span />
          <span />
          <span />
          <span />
          <span />
          <span />
          <span />
        </div>
      </div>
      <div
        class="sc-bdnxRM Flex___StyledAppBox-RSPpX cOrEHs"
      >
        <button
          class="sc-bdnxRM Button__ButtonInner-dWPVNG eWdgRn kfdEqC"
          type="button"
        >
          global.cancel
        </button>
        <button
          class="sc-bdnxRM Button__ButtonInner-dWPVNG fXAuOL kFclcg"
          type="submit"
        >
          argument.publish.mine
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`<DebateStepPageVoteForm/> should renders correctly when argumented not confirmed 1`] = `
<div
  style="width:100%;opacity:0"
>
  <div
    class="sc-bdnxRM Flex___StyledAppBox-RSPpX kFoLMp"
  >
    <span
      aria-label="vote"
      class="DebateStepPageVoteForm___StyledSpan2-llFVim coOvRu"
      role="img"
    >
      🎉
    </span>
    <span>
      publish.argument.validate.account
    </span>
    <button
      class="sc-bdnxRM Button__ButtonInner-dWPVNG jyZEiW fLviuu"
      type="button"
    >
      delete.vote.against
    </button>
  </div>
  <div
    class="sc-bdnxRM cnbanf DebateStepPageVoteForm___StyledCard-fgMgDs eazeOX"
  >
    <form
      class="DebateStepPageVoteForm__Form-kqneNm jEFxSi"
      id="debate-argument-form"
    >
      <div
        class="form-group"
      >
        <textarea
          aria-describedby="label-body "
          aria-invalid="false"
          autocomplete="off"
          class="form-control"
          id="body"
          minlength="1"
          name="body"
          placeholder="why-are-you-against"
          type="textarea"
        />
        <div
          class="Notepad__Container-inQLrC cTBqFb visible-print-block"
        >
          <span />
          <span />
          <span />
          <span />
          <span />
          <span />
          <span />
          <span />
          <span />
          <span />
          <span />
          <span />
          <span />
          <span />
          <span />
        </div>
      </div>
      <div
        class="sc-bdnxRM Flex___StyledAppBox-RSPpX cOrEHs"
      >
        <button
          class="sc-bdnxRM Button__ButtonInner-dWPVNG eWdgRn kfdEqC"
          type="button"
        >
          global.cancel
        </button>
        <button
          class="sc-bdnxRM Button__ButtonInner-dWPVNG fXAuOL kFclcg"
          type="submit"
        >
          argument.publish.mine
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`<DebateStepPageVoteForm/> should renders correctly when argumented not confirmed on mobile 1`] = `
<div
  style="width:100%;opacity:1"
>
  <div
    class="sc-bdnxRM Flex___StyledAppBox-RSPpX kFoLMp"
  >
    <button
      class="sc-bdnxRM Button__ButtonInner-dWPVNG jyZEiW fLviuu"
      type="button"
    >
      delete.vote.against
    </button>
    <p
      class="sc-bdnxRM PLHLg"
    >
      <span
        aria-label="vote"
        class="DebateStepPageVoteForm___StyledSpan-bElaUw jzKwr"
        role="img"
      >
        🎉
      </span>
      <span>
        publish.argument.validate.account
      </span>
    </p>
  </div>
  <button
    class="sc-bdnxRM Button__ButtonInner-dWPVNG hgJMSO kFclcg"
    type="button"
  >
    publish-argument
  </button>
</div>
`;

exports[`<DebateStepPageVoteForm/> should renders correctly when argumented on mobile 1`] = `
<div
  style="width:100%;opacity:1"
>
  <div
    class="sc-bdnxRM Flex___StyledAppBox-RSPpX kFoLMp"
  >
    <button
      class="sc-bdnxRM Button__ButtonInner-dWPVNG jyZEiW fLviuu"
      type="button"
    >
      delete.vote.against
    </button>
    <p
      class="sc-bdnxRM PLHLg"
    >
      <span
        aria-label="vote"
        class="DebateStepPageVoteForm___StyledSpan-bElaUw jzKwr"
        role="img"
      >
        🎉
      </span>
      <span>
        thanks-for-debate-richer
      </span>
    </p>
  </div>
  <div
    class="sc-bdnxRM Flex___StyledAppBox-RSPpX KSjKw fvBSZY"
  >
    <a
      class="twitter-share-button"
      data-show-count="false"
      href="https://twitter.com/share?ref_src=twsrc%5Etfw"
    >
      Tweet
    </a>
    <button
      class="sc-bdnxRM Button__ButtonInner-dWPVNG fVKHUK jfKDDI"
      type="button"
    >
      <iconmock
        class="sc-bdnxRM Icon__IconInner-dsjTlW Icon___StyledIconInner-cEPYKG cyHrtp cIIQlv AMDLx icon"
      />
      global.link
    </button>
  </div>
  <button
    class="sc-bdnxRM Button__ButtonInner-dWPVNG hgJMSO kFclcg"
    type="button"
  >
    publish-argument
  </button>
</div>
`;

exports[`<DebateStepPageVoteForm/> should renders correctly when voted 1`] = `
<div
  style="width:100%;opacity:0"
>
  <div
    class="sc-bdnxRM Flex___StyledAppBox-RSPpX kFoLMp"
  >
    <span
      aria-label="vote"
      class="DebateStepPageVoteForm___StyledSpan2-llFVim coOvRu"
      role="img"
    >
      🗳️
    </span>
    <span>
      thanks-for-your-vote
    </span>
    <button
      class="sc-bdnxRM Button__ButtonInner-dWPVNG jyZEiW fLviuu"
      type="button"
    >
      delete.vote.against
    </button>
  </div>
  <div
    class="sc-bdnxRM cnbanf DebateStepPageVoteForm___StyledCard-fgMgDs eazeOX"
  >
    <form
      class="DebateStepPageVoteForm__Form-kqneNm jEFxSi"
      id="debate-argument-form"
    >
      <div
        class="form-group"
      >
        <textarea
          aria-describedby="label-body "
          aria-invalid="false"
          autocomplete="off"
          class="form-control"
          id="body"
          minlength="1"
          name="body"
          placeholder="why-are-you-against"
          type="textarea"
        />
        <div
          class="Notepad__Container-inQLrC cTBqFb visible-print-block"
        >
          <span />
          <span />
          <span />
          <span />
          <span />
          <span />
          <span />
          <span />
          <span />
          <span />
          <span />
          <span />
          <span />
          <span />
          <span />
        </div>
      </div>
      <div
        class="sc-bdnxRM Flex___StyledAppBox-RSPpX cOrEHs"
      >
        <button
          class="sc-bdnxRM Button__ButtonInner-dWPVNG eWdgRn kfdEqC"
          type="button"
        >
          global.cancel
        </button>
        <button
          class="sc-bdnxRM Button__ButtonInner-dWPVNG fXAuOL kFclcg"
          type="submit"
        >
          argument.publish.mine
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`<DebateStepPageVoteForm/> should renders correctly when voted anonymously 1`] = `
<div
  style="width:100%;opacity:0"
>
  <div
    class="sc-bdnxRM Flex___StyledAppBox-RSPpX kFoLMp"
  >
    <span
      aria-label="vote"
      class="DebateStepPageVoteForm___StyledSpan2-llFVim coOvRu"
      role="img"
    >
      🗳️
    </span>
    <span>
      thanks-for-your-vote {"instance":"CapCollectif"}
    </span>
    <button
      class="sc-bdnxRM Button__ButtonInner-dWPVNG jyZEiW fLviuu"
      type="button"
    >
      delete.vote.against
    </button>
  </div>
  <div
    class="sc-bdnxRM cnbanf DebateStepPageVoteForm___StyledCard-fgMgDs eazeOX"
  >
    <form
      class="DebateStepPageVoteForm__Form-kqneNm jEFxSi"
      id="debate-argument-form"
    >
      <div
        class="form-group"
      >
        <textarea
          aria-describedby="label-body "
          aria-invalid="false"
          autocomplete="off"
          class="form-control"
          id="body"
          minlength="1"
          name="body"
          placeholder="why-are-you-against"
          type="textarea"
        />
        <div
          class="Notepad__Container-inQLrC cTBqFb visible-print-block"
        >
          <span />
          <span />
          <span />
          <span />
          <span />
          <span />
          <span />
          <span />
          <span />
          <span />
          <span />
          <span />
          <span />
          <span />
          <span />
        </div>
      </div>
      <div
        class="sc-bdnxRM Flex___StyledAppBox-RSPpX cOrEHs"
      >
        <button
          class="sc-bdnxRM Button__ButtonInner-dWPVNG eWdgRn kfdEqC"
          type="button"
        >
          global.cancel
        </button>
        <button
          aria-controls="id-1"
          aria-expanded="false"
          aria-haspopup="dialog"
          class="sc-bdnxRM Button__ButtonInner-dWPVNG jyNtxW kFclcg"
          type="submit"
        >
          global.validate
        </button>
        <div
          aria-label="global.menu"
          aria-modal="true"
          data-dialog="true"
          hidden=""
          id="id-1"
          role="dialog"
          style="display:none"
          tabindex="-1"
        />
      </div>
    </form>
  </div>
</div>
`;

exports[`<DebateStepPageVoteForm/> should renders correctly when voted anonymously on mobile 1`] = `
<div
  style="width:100%;opacity:1"
>
  <div
    class="sc-bdnxRM Flex___StyledAppBox-RSPpX kFoLMp"
  >
    <button
      class="sc-bdnxRM Button__ButtonInner-dWPVNG jyZEiW fLviuu"
      type="button"
    >
      delete.vote.against
    </button>
    <p
      class="sc-bdnxRM PLHLg"
    >
      <span
        aria-label="vote"
        class="DebateStepPageVoteForm___StyledSpan-bElaUw jzKwr"
        role="img"
      >
        🗳️
      </span>
      <span>
        thanks-for-your-vote {"instance":"CapCollectif"}
      </span>
    </p>
  </div>
  <button
    aria-controls="id-1"
    aria-expanded="false"
    aria-haspopup="dialog"
    class="sc-bdnxRM Button__ButtonInner-dWPVNG ktGAwN kFclcg"
    type="submit"
  >
    publish-argument
  </button>
  <div
    aria-label="global.menu"
    aria-modal="true"
    data-dialog="true"
    hidden=""
    id="id-1"
    role="dialog"
    style="display:none"
    tabindex="-1"
  />
</div>
`;

exports[`<DebateStepPageVoteForm/> should renders correctly when voted on mobile 1`] = `
<div
  style="width:100%;opacity:1"
>
  <div
    class="sc-bdnxRM Flex___StyledAppBox-RSPpX kFoLMp"
  >
    <button
      class="sc-bdnxRM Button__ButtonInner-dWPVNG jyZEiW fLviuu"
      type="button"
    >
      delete.vote.against
    </button>
    <p
      class="sc-bdnxRM PLHLg"
    >
      <span
        aria-label="vote"
        class="DebateStepPageVoteForm___StyledSpan-bElaUw jzKwr"
        role="img"
      >
        🗳️
      </span>
      <span>
        thanks-for-your-vote
      </span>
    </p>
  </div>
  <button
    class="sc-bdnxRM Button__ButtonInner-dWPVNG hgJMSO kFclcg"
    type="button"
  >
    publish-argument
  </button>
</div>
`;
